--- a/src/Views/layouts/base.twig
+++ b/src/Views/layouts/base.twig
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/assets/css/global.css">
     {# CSS do header (agora carregado antes de tudo) #}
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="shortcut icon" href="/assets/images/logo/favicon.ico" type="image/x-icon">
     {% block styles %}{% endblock %}
 </head>
 <body>
