--- a/src/Views/layouts/partial/footer.twig
+++ b/src/Views/layouts/partial/footer.twig
@@ -27,7 +27,7 @@
                 <div class="footer-contact">
                     <h3 class="footer-heading">Contato</h3>
                     <ul class="contact-list">
-                        <li><i data-feather="map-pin"></i> Av. Educação, 1000 - São Paulo, SP</li>
+                        <li><i data-feather="map-pin"></i> [Endereços] - Codó, MA</li>
                         <li><i data-feather="phone"></i> (98) 9212-0055</li>
                         <li><i data-feather="mail"></i> projeto.discursivamente@gmail.com</li>
                     </ul>
